[package]
name = "shuttle-graf"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
base64 = "0.22.0"
shuttle-axum = "0.42.0"
shuttle-runtime = { version = "0.42.0", default-features = false }
tokio = "1.28.2"
tracing = "0.1.40"
tracing-loki = "0.2.4"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
url = "2.5.0"
